{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 78,
  "lineage": "6c5c3043-91bc-f4db-0bf0-b0aaa776455f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myproject",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08802ddc5c8ec9283",
            "arn": "arn:aws:ec2:ap-east-1:779255550655:instance/i-00a9b145230f9e511",
            "associate_public_ip_address": true,
            "availability_zone": "ap-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a9b145230f9e511",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03023571b2fe1fe86",
            "private_dns": "ip-172-31-2-157.ap-east-1.compute.internal",
            "private_ip": "172.31.2.157",
            "public_dns": "ec2-16-162-105-125.ap-east-1.compute.amazonaws.com",
            "public_ip": "16.162.105.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0232e2229b9c9b0fc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f0e3cd5b44d3939",
            "tags": {
              "Name": "For_Aws_Terraform"
            },
            "tags_all": {
              "Name": "For_Aws_Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-042c8925ddc66c5c6"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:security-group/sg-05108bb4d0e46f126",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05108bb4d0e46f126",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20220419134707185600000001",
            "name_prefix": "all_worker_management",
            "owner_id": "779255550655",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b6c678f0b39114ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:security-group/sg-0970e4230770ea29c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0970e4230770ea29c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20220419134707196100000003",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "779255550655",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b6c678f0b39114ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:security-group/sg-09f86643c00ac3fac",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09f86643c00ac3fac",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20220419134707195400000002",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "779255550655",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b6c678f0b39114ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:security-group/sg-0bc3d99adba536ca5",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0bc3d99adba536ca5",
            "ingress": [],
            "name": "education-eks-EjLutf9m20220419134707208000000005",
            "name_prefix": "education-eks-EjLutf9m",
            "owner_id": "779255550655",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "education-eks-EjLutf9m-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "education-eks-EjLutf9m-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6c678f0b39114ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:security-group/sg-0f44a201a6b068d31",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0f44a201a6b068d31",
            "ingress": [],
            "name": "education-eks-EjLutf9m20220419134707207300000004",
            "name_prefix": "education-eks-EjLutf9m",
            "owner_id": "779255550655",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "education-eks-EjLutf9m-eks_worker_sg",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "owned"
            },
            "tags_all": {
              "Name": "education-eks-EjLutf9m-eks_worker_sg",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6c678f0b39114ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2815886326",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bc3d99adba536ca5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2869169503",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc3d99adba536ca5",
            "self": false,
            "source_security_group_id": "sg-0f44a201a6b068d31",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-1596175241",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f44a201a6b068d31",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3178626580",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f44a201a6b068d31",
            "self": false,
            "source_security_group_id": "sg-0bc3d99adba536ca5",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-618196915",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f44a201a6b068d31",
            "self": false,
            "source_security_group_id": "sg-0bc3d99adba536ca5",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-929248759",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f44a201a6b068d31",
            "self": false,
            "source_security_group_id": "sg-0f44a201a6b068d31",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05069376dc98e7717",
            "association_id": "eipassoc-052a57ee5d92d8970",
            "domain": "vpc",
            "id": "eipalloc-05069376dc98e7717",
            "network_border_group": "ap-east-1",
            "network_interface": "eni-067bec3a861c67c0a",
            "private_dns": "ip-10-0-4-127.ap-east-1.compute.internal",
            "private_ip": "10.0.4.127",
            "public_dns": "ec2-16-163-246-242.ap-east-1.compute.amazonaws.com",
            "public_ip": "16.163.246.242",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "education-eks-ap-east-1a",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared"
            },
            "tags_all": {
              "Name": "education-eks-ap-east-1a",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:internet-gateway/igw-09364625634e621b7",
            "id": "igw-09364625634e621b7",
            "owner_id": "779255550655",
            "tags": {
              "Name": "education-eks",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared"
            },
            "tags_all": {
              "Name": "education-eks",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared"
            },
            "vpc_id": "vpc-0b6c678f0b39114ad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05069376dc98e7717",
            "connectivity_type": "public",
            "id": "nat-0d78a3326feabd34e",
            "network_interface_id": "eni-067bec3a861c67c0a",
            "private_ip": "10.0.4.127",
            "public_ip": "16.163.246.242",
            "subnet_id": "subnet-064a3e757a149f364",
            "tags": {
              "Name": "education-eks-ap-east-1a",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared"
            },
            "tags_all": {
              "Name": "education-eks-ap-east-1a",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08fa9b5217c17ab251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d78a3326feabd34e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08fa9b5217c17ab25",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09364625634e621b7",
            "id": "r-rtb-04ab78dabc971eeb11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04ab78dabc971eeb1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:route-table/rtb-08fa9b5217c17ab25",
            "id": "rtb-08fa9b5217c17ab25",
            "owner_id": "779255550655",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d78a3326feabd34e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "education-eks-private",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared"
            },
            "tags_all": {
              "Name": "education-eks-private",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6c678f0b39114ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:route-table/rtb-04ab78dabc971eeb1",
            "id": "rtb-04ab78dabc971eeb1",
            "owner_id": "779255550655",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09364625634e621b7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "education-eks-public",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared"
            },
            "tags_all": {
              "Name": "education-eks-public",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6c678f0b39114ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034a6ff7ef0270bf6",
            "route_table_id": "rtb-08fa9b5217c17ab25",
            "subnet_id": "subnet-0c9b61762a6058d80"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028d27355fcb09038",
            "route_table_id": "rtb-08fa9b5217c17ab25",
            "subnet_id": "subnet-094cf3a33c354f79d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e8e469207ba9419",
            "route_table_id": "rtb-08fa9b5217c17ab25",
            "subnet_id": "subnet-0572606daa475722d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c312707b9905a1e3",
            "route_table_id": "rtb-04ab78dabc971eeb1",
            "subnet_id": "subnet-064a3e757a149f364"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3a87d0fdc9df7ed",
            "route_table_id": "rtb-04ab78dabc971eeb1",
            "subnet_id": "subnet-0cabc1c674166bf19"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3330a83ce3fc8d4",
            "route_table_id": "rtb-04ab78dabc971eeb1",
            "subnet_id": "subnet-067781ece06f8d820"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:subnet/subnet-0c9b61762a6058d80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c9b61762a6058d80",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779255550655",
            "tags": {
              "Name": "education-eks-private-ap-east-1a",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "education-eks-private-ap-east-1a",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b6c678f0b39114ad"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:subnet/subnet-094cf3a33c354f79d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1b",
            "availability_zone_id": "ape1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-094cf3a33c354f79d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779255550655",
            "tags": {
              "Name": "education-eks-private-ap-east-1b",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "education-eks-private-ap-east-1b",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b6c678f0b39114ad"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:subnet/subnet-0572606daa475722d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1c",
            "availability_zone_id": "ape1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0572606daa475722d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779255550655",
            "tags": {
              "Name": "education-eks-private-ap-east-1c",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "education-eks-private-ap-east-1c",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b6c678f0b39114ad"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:subnet/subnet-064a3e757a149f364",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-064a3e757a149f364",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "779255550655",
            "tags": {
              "Name": "education-eks-public-ap-east-1a",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "education-eks-public-ap-east-1a",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b6c678f0b39114ad"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:subnet/subnet-0cabc1c674166bf19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1b",
            "availability_zone_id": "ape1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0cabc1c674166bf19",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "779255550655",
            "tags": {
              "Name": "education-eks-public-ap-east-1b",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "education-eks-public-ap-east-1b",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b6c678f0b39114ad"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:subnet/subnet-067781ece06f8d820",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1c",
            "availability_zone_id": "ape1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-067781ece06f8d820",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "779255550655",
            "tags": {
              "Name": "education-eks-public-ap-east-1c",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "education-eks-public-ap-east-1c",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b6c678f0b39114ad"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:vpc/vpc-0b6c678f0b39114ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03f3770bac9c308b9",
            "default_route_table_id": "rtb-0f810dd88daa9249f",
            "default_security_group_id": "sg-0db9b4b38a913a1ad",
            "dhcp_options_id": "dopt-06c853d9c50852b51",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b6c678f0b39114ad",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f810dd88daa9249f",
            "owner_id": "779255550655",
            "tags": {
              "Name": "education-eks",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared"
            },
            "tags_all": {
              "Name": "education-eks",
              "kubernetes.io/cluster/education-eks-EjLutf9m": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}